add basic book management

--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberDetails.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberDetails.razor
@@ -24,7 +24,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        Person = await PersonService.GetPeopleByIdAsync(Id);
+        Person = await PersonService.GetPersonByIdAsync(Id);
     }
 
     private async Task HandleValidSubmitAsync()
