--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberAdd.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberAdd.razor
@@ -4,7 +4,7 @@
 @inject IPersonService PersonService
 @inject NavigationManager NavigationManager
 
-<h3>PersonAdd</h3>
+<h3>Add Member</h3>
 <MemberForm Person="@Person" ButtonTitle="Add" HandleValidSubmitAsync="@HandleValidSubmitAsync"/>
 
 @code {
