--- a/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Member
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="books">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Books
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="books\add">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add Book
+            </NavLink>
+        </div>
     </nav>
 </div>
 
