--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberList.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberList.razor
@@ -27,7 +27,7 @@ else
                     <td>@member.Name</td>
                     <td>@member.Address</td>
                     <td>@member.BirthDate</td>
-                    <td><a href="persons/@member.ReaderNumber" class="btn btn-primary">Details</a></td>
+                    <td><a href="persons/edit/@member.ReaderNumber" class="btn btn-primary">Edit</a></td>
                 </tr>
             }
         </tbody>
