--- a/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Book
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="borrowing">
+                <span class="oi oi-plus" aria-hidden="true"></span> Borrowing
+            </NavLink>
+        </div>
     </nav>
 </div>
 
