Add member details

--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberList.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberList.razor
@@ -28,6 +28,7 @@ else
                     <td>@member.Address</td>
                     <td>@member.BirthDate</td>
                     <td><a href="persons/edit/@member.ReaderNumber" class="btn btn-primary">Edit</a></td>
+                    <td><a href="persons/@member.ReaderNumber" class="btn btn-primary">Details</a></td>
                 </tr>
             }
         </tbody>
