--- a/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Borrowing
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="persons/select">
+                <span class="oi oi-plus" aria-hidden="true"></span> Member Action
+            </NavLink>
+        </div>
     </nav>
 </div>
 
