--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberSelect.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberSelect.razor
@@ -1,4 +1,4 @@
-﻿@page "/persons/select"
+﻿@page "/"
 @using LibrarianApplication.Blazor.Model;
 @using LibrarianApplication.Blazor.Services;
 @inject IPersonService PersonService
@@ -9,7 +9,7 @@
 }
 else
 {
-    <h3>Member List</h3>
+    <h3>Library Desk</h3>
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
