fix .Contract ClassLibrary issue

--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/BookAdd.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/BookAdd.razor
@@ -1,6 +1,7 @@
 ﻿@page "/books/add"
 @using LibrarianApplication.Blazor.Model;
 @using LibrarianApplication.Blazor.Services;
+@using LibraryApp.Contract;
 @inject IBookService BookService
 @inject NavigationManager NavigationManager
 
