--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/BookList.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/BookList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/books"
 @using LibrarianApplication.Blazor.Model;
 @using LibrarianApplication.Blazor.Services;
+@using LibraryApp.Contract;
 @inject IBookService BookService
 
 @if (Books is null)
