--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberEdit.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberEdit.razor
@@ -1,6 +1,7 @@
 ﻿@page "/persons/edit/{id:int}"
 @using LibrarianApplication.Blazor.Model;
-@using LibrarianApplication.Blazor.Services
+@using LibrarianApplication.Blazor.Services;
+@using LibraryApp.Contract;
 @inject IPersonService PersonService
 @inject NavigationManager NavigationManager
 
