--- a/LibraryApplication/LibrarianApplication.Blazor/Shared/BookForm.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Shared/BookForm.razor
@@ -1,4 +1,5 @@
 ﻿@using LibrarianApplication.Blazor.Model;
+@using LibraryApp.Contract;
 <EditForm Model="@Book" OnValidSubmit="@HandleValidSubmitAsync">
     <DataAnnotationsValidator />
     <div class="mb0">
