--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/BookSelect.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/BookSelect.razor
@@ -1,6 +1,7 @@
-﻿@page "/books/borrow/{memberid:int}"
+﻿@page "/borrow/{memberid:int}"
 @using LibrarianApplication.Blazor.Model;
 @using LibrarianApplication.Blazor.Services;
+@using LibraryApp.Contract;
 @inject IBookService BookService
 @inject IBorrowService BorrowService
 @inject NavigationManager NavigationManager
@@ -11,7 +12,7 @@
 }
 else
 {
-    <h3>Book List</h3>
+    <h3>List of available books</h3>
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
@@ -36,6 +37,7 @@ else
             }
         </tbody>
     </table>
+    <a href="/" class="btn btn-primary">Back</a>
 }
 
 @code {
@@ -46,7 +48,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        Books = await BookService.GetAllBooksInAsync();
+        Books = await BookService.GetAllAvailableBookAsync();
     }
 
     private async Task BorrowBook(int InventoryNumber)
