--- a/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberAdd.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Pages/MemberAdd.razor
@@ -1,6 +1,7 @@
 ﻿@page "/persons/add"
 @using LibrarianApplication.Blazor.Model;
 @using LibrarianApplication.Blazor.Services;
+@using LibraryApp.Contract;
 @inject IPersonService PersonService
 @inject NavigationManager NavigationManager
 
