--- a/LibraryApplication/LibrarianApplication.Blazor/Shared/MemberForm.razor
+++ b/LibraryApplication/LibrarianApplication.Blazor/Shared/MemberForm.razor
@@ -1,32 +1,40 @@
 ﻿@using LibrarianApplication.Blazor.Model;
 @using LibraryApp.Contract;
-<EditForm Model="@Person" OnValidSubmit="@HandleValidSubmitAsync">
-    <DataAnnotationsValidator />
-    <div class="mb0">
-        <label class="col-form-label">Name</label>
-        <InputText @bind-Value="@Person.Name" class="form-control" />
-        <ValidationMessage For="() => Person.Name" />
-    </div>
-    <div class="mb0">
-        <label class="col-form-label">Address</label>
-        <InputText @bind-Value="@Person.Address" class="form-control" />
-        <ValidationMessage For="() => Person.Address" />
-    </div>
-    <div class="mb0">
-        <label class="col-form-label">BirthDate</label>
-        <InputDate @bind-Value="@Person.BirthDate" class="form-control" />
-        <ValidationMessage For="() => Person.BirthDate" />
-    </div>
-    <button style="margin-top:10px" type="submit" class="btn btn-primary form-control mb-3">@ButtonTitle</button>
-</EditForm>
+
+@if (Person is null || HandleValidSubmitAsync is null || ButtonTitle is null)
+{
+    <p>Loading...</p>
+}
+else
+{
+    <EditForm Model="@Person" OnValidSubmit="@HandleValidSubmitAsync">
+        <DataAnnotationsValidator />
+        <div class="mb0">
+            <label class="col-form-label">Name</label>
+            <InputText @bind-Value="@Person.Name" class="form-control" />
+            <ValidationMessage For="() => Person.Name" />
+        </div>
+        <div class="mb0">
+            <label class="col-form-label">Address</label>
+            <InputText @bind-Value="@Person.Address" class="form-control" />
+            <ValidationMessage For="() => Person.Address" />
+        </div>
+        <div class="mb0">
+            <label class="col-form-label">BirthDate</label>
+            <InputDate @bind-Value="@Person.BirthDate" class="form-control" />
+            <ValidationMessage For="() => Person.BirthDate" />
+        </div>
+        <button style="margin-top:10px" type="submit" class="btn btn-primary form-control mb-3">@ButtonTitle</button>
+    </EditForm>
+}
 
 @code {
     [Parameter]
-    public Person Person { get; set; }
+    public Person? Person { get; set; }
 
     [Parameter]
-    public string ButtonTitle { get; set; }
+    public string? ButtonTitle { get; set; }
 
     [Parameter]
-    public Func<Task> HandleValidSubmitAsync { get; set; }
+    public Func<Task>? HandleValidSubmitAsync { get; set; }
 }
